--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-This is my public Repo Home Page
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Bio of Nina Anderson</title>
+</head>
+<body>
+  <h1>Welcome to my homepage!</h1>
+  <h2>My Family:</h2>
+  <ul>
+    <li>Jim (husband)
+    <li> Thomas (3 year old son)
+    <li> Sofia (3 year old daughter)
+    </ul>
+  <h2>Pictures of my family</h2>
+    <img width="200" src="great-success.png" alt="Jim">
+  <h2> My LinkedIn Profile </h2>
+  <a href="https://www.linkedin.com/in/nina-anderson-914687/" target = "blank">LinkedIn</a>
+</body>
+</html>
